...
                    android:id="@+id/etNote"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top|start"
                    android:inputType="textMultiLine"
                    android:minLines="6"
                    android:maxLines="10"
                    android:scrollbars="vertical"
                    android:textColor="@color/textColorPrimary" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
...
